# 2026_modele_portfolio

./: .gitignore  .gitlab-ci.yml  README.md  myst.yml  pixi.toml  pyproject.toml
content/: apropos.md  mon_projet.ipynb  portfolio.md
