[project]
name = "geoinf-ii-tp5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "geopandas>=1.1.3",
    "jupyter-book>=2.1.4",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "shapely>=2.1.2",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
geoinf-ii-tp5 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
cartopy = ">=0.25.0,<0.26"
geopandas = ">=1.1.3,<2"
matplotlib = ">=3.10.9,<4"
pandas = ">=3.0.3,<4"
shapely = ">=2.1.2,<3"
jupyter-book = ">=2.1.5,<3"
